--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,15 +1,64 @@
+@font-face{
+  font-family: "Helv";
+  src: url("../fonts/HelveticaNeueLTCom-Cn.ttf");
+}
+@font-face{
+  font-family: "PingFang Bold";
+  src: url("../fonts/PingFang Bold.ttf");
+}
+@font-face{
+  font-family: "PingFang Light";
+  src: url("../fonts/PingFang Light.ttf");
+}
+@font-face{
+  font-family: "PingFang Medium";
+  src: url("../fonts/PingFang Medium.ttf");
+}
+@font-face{
+  font-family: "PingFang Regular";
+  src: url("../fonts/PingFang Regular.ttf");
+}
+
+body { font-family: "PingFang Medium"; }
+
+.noMarRgt{
+	margin-right: 0 !important;
+}
 .noBorderRgt{
 	border-right: none !important;
 }
-
 .relative{
 	position: relative;
 }
 
-@media (min-width: 1200px) {
-	
+.foot{
+	width: 100%;
+	height: 1.28rem;
+}
+.footer{
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 1.28rem;
+	background: #fff;
+}
+.btmBtn{
+	display: block;
+	width: 6.9rem;
+	height: 0.98rem;
+	text-align: center;
+	line-height: 0.98rem;
+	font-size: 0.36rem;
+	color: #fff;
+	background: #333;
+	margin: 0 auto;
 }
 
+
+/*@media (min-width: 1200px) {
+	
+}
 @media (min-width: 992px) and (max-width: 1199px) {
 	
 }
@@ -20,7 +69,7 @@
 
 @media (max-width: 767px) {
 	
-}
+}*/
 
 
 
