--- a/src/css/views/goodsLists.css
+++ b/src/css/views/goodsLists.css
@@ -34,22 +34,57 @@
 }
 .goodsOneTop{
 	position: relative;
+	display: table-cell;
 	width: 3.15rem;
 	height: 3.1rem;
 	text-align: center;
-	line-height: 3.1rem;
+	vertical-align: middle;
 }
 .goodsOneTop>img{
-	display: block;
+	display: inline-block;
 	width: 2.24rem;
-	margin: 0 auto;
+	vertical-align: middle;
 }
-
-
-
-
-
-
+.collection{
+	position: absolute;
+	right: 0;
+	bottom: 0.1rem;
+}
+.collection>img{
+	display: block;
+	width: 0.3rem;
+	height: 0.28rem;
+}
+.brand{
+	text-align: center;
+	line-height: 0.4rem;
+	color: #333;
+	font-size: 0.32rem;
+	font-family: "Helv";
+}
+.useDegree{
+	text-align: center;
+	line-height: 0.36rem;
+	color: #808080;
+	font-size: 0.22rem;
+}
+.price{
+	text-align: center;
+	line-height: 0.34rem;
+	color: #333;
+	font-size: 0.28rem;
+}
+.mark{
+	font-size: 0.26rem;
+}
+.number1{
+	font-family: "Helv";
+}
+.number2{
+	font-family: "Helv";
+	font-size: 0.24rem;
+	color: #8A8A8A;
+}
 
 
 
